--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.5",
     "expeditious-engine-redis": "^0.1.2",
     "express": "^4.17.1",
+    "express-expeditious": "^5.1.1",
     "express-fileupload": "^1.2.0",
     "helmet": "^4.3.1",
     "morgan": "^1.10.0",
